--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+# RUBY ON RAID ON GITHUB TUTORIAL
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+This is the schizzle. [*RUBY TUT*] (http://gokickoff.com/) by [Alex]
 
 
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
